--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,24 @@
 	<packaging>jar</packaging>
 	
 	<name>csv-to-sstable</name>
-	
+
+	<repositories>
+		<repository>
+			<id>local-maven-repo</id>
+			<url>file:///${env.QS_MAVEN_REPO}</url>
+		</repository>
+	</repositories>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.qsystem</groupId>
+			<artifactId>common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>net.sf.supercsv</groupId>
 			<artifactId>super-csv</artifactId>
