change logger and main class

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.spbtv.cassandra.bulkload.Bulkload</mainClass>
+                            <mainClass>com.spbtv.cassandra.bulkload.Launcher</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
